infrastructure/base/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: argocd
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.1.60
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https-public
      hostname: "*.paulojauregui.com"
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: paulojauregui-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-local
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: argocd-server-tls
      allowedRoutes:
        namespaces:
          from: All
